Changed text alignement, fixed line breaks. move page title

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,7 @@ h1{
 }
 
 h2{
-    color: #f2b632;
+    color: black;
 }
 
 p{
@@ -143,6 +143,7 @@ button:hover{
   text-align: center;
   font-size: 30px;
   float: none;
+  margin-left: 10px;
 }
 
 .navbar .navbar-nav {
@@ -220,6 +221,8 @@ button:hover{
   margin-left: auto;
   position: relative;
   float:left;
+  text-indent: 5;
+  text-align: left;
 }
 
 
